...
        <Preference
            app:key="pref_app_applicationId"
            app:title="ID" />

        <Preference
            app:key="pref_app_versionName"
            app:title="Version name" />

        <Preference
            app:key="pref_app_versionCode"
            app:title="Version code" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_device_24"
        app:initialExpandedChildrenCount="3"
...
